[package]
name = "tweetai"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.3.1"
tokio = { version = "1.28.0", features = ["full"] }
sqlx = { version = "0.6.3", features = ["postgres", "runtime-tokio-native-tls", "chrono", "uuid", "json"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
jsonwebtoken = "8.3.0"
rust-argon2 = "1.0.0"
chrono = { version = "0.4.24", features = ["serde"] }
uuid = { version = "1.3.1", features = ["v4", "serde"] }
dotenv = "0.15.0"
env_logger = "0.10.0"
log = "0.4.17"
thiserror = "1.0.40"
signalprotocol-rs = "0.3.0"  # Signal Protocol implementation
rand = "0.8.5"
actix-cors = "0.6.4"
actix-rate-limit = "0.3.1"
tracing = "0.1.37"
tracing-actix-web = "0.7.4"
secrecy = "0.8.0"  # For handling sensitive values
